# cmake_ctest_catch2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  build_and_test.sh  changelog.md  main.cpp  some_test.cpp  test_main.cpp
.github/workflows/: build_and_test.yml  cmake.yml
app/: main.cpp
src/: Addressbook.cpp  Addressbook.h  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Loader.h  Output.h  Person.h  main.cpp
tests/: Addressbook_Test.cpp  CMakeLists.txt  HelloWorld_Test.cpp  Loader_Test.cpp  OutputMock.h  Output_Test.cpp  mock_Test.cpp  simple_Test.cpp  some_test.cpp  test_main.cpp
